[package]
name = "line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3"
smallvec = "^1.10"
tokio = { version = "^1.26", features = ["macros", "net", "rt", "sync", "time"] }
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }